@@ -1,3 +1,5 @@
+- export to PDF
+- printing
 - "split pages into 2" mode
 - smooth scroll
 - individual frame zooming + frames editor
