@@ -1,10 +1,12 @@
 2007-xx-yy:  0.4.0       -- ported to Qt4
-                         -- Imlib2 library is no longer used
+                         -- Imlib2 library is (temporarily) removed
 			 -- support for nested cbr archives
                          -- new option: "Save page as"
 			 -- new option: Auto-adjust cache size
 			 -- added small (15 pct) overlap when scrolling page with
 			    Space/Backspace
+			 -- chanhge in files sorting: it is not
+			    case-insenstivie, with directories being last
 			 -- In-built help was removed
 
 2006-11-29:  0.3.4       -- fixed drawing/scaling/rotation bugs in two-pages
